# Python-QuickStart-Codes---Stats-ML-DL-AI-NLP

./: README.md
Google ML Crash Course/: Google_ML_Crash_Course Intro_to_Modeling.ipynb  Google_ML_Crash_Course_Clustering_(Manual_Similarity_with_Chocolates).ipynb  Google_ML_Crash_Course_Clustering_(Supervised_Similarity_with_Chocolates).ipynb
LLM Agents (HuggingFace)/: Dummy_Agent_Library.ipynb
Learning Modules/BERT Sentiment on Docker/: DockerBasics.docx  Dockerfile  config.py  dataset.py  requirements.txt  train.py
Learning Modules/BERT Sentiment on Flask/: readme.md
Learning Modules/Intro to Prefect/: .pre-commit-config.yaml  README.md  pyproject.toml
Learning Modules/Intro to Prefect/src/pipeline/: main.py
ML for Audio and Speech (HuggingFace)/: Unit_0__Whisper_Gradio(demo).ipynb
Online Sources (Blogs&Articles&Youtube)/: Automating Excel with Python (openpyxl).ipynb  Breakpoints Analysis.ipynb  NLP_Zero_to_Hero_(by_Laurence_Moroney).ipynb  TS1 - Curve fitting is (almost) all you need.ipynb  Time Series Analysis (by git user alod83).ipynb  model-explainability-with-shap-only-guide-u-need.ipynb
Online Sources (Blogs&Articles)/: Hypothesis Testing (z-test, t-test, AB test).ipynb  Introduction to ANOVA for Statistics and Data Science (with COVID-19 Case Study).ipynb
Online Sources (References&EtCetera)/: Intro_to_Weights_&_Biases_CV,_NLP_and_RL.ipynb  Session_4_Attention_Introduction_live.ipynb  Time_Series_Forecasting_with_GreyKite_and_W&B.ipynb  model_view_bert.ipynb
Python DS & Algorithms (Jovian.ai)/: python-sorting-divide-and-conquer.ipynb
(+95 files in other folders)
