[project]
name = "intro-to-prefect"
description = "An introductory project to Prefect"
version = "0.1.0"
authors = [
    { name = "Shashank Prakash", email = "quicksilvershanks@gmail.com" }
]
dependencies = [
    "prefect >= 2.19.9",
    "httpx ~= 0.25.0",
    "psycopg2-binary ~= 2.9.7"
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[project.scripts]
pipeline = "pipeline.main:main"
